--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
+        <li>GIT</li>
         <li>Integração Contínua</li>
     </ul>
 </body>
